<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            tools:text="@string/question_africa"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/question_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="7dp" android:layout_marginTop="39dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5" app:layout_constraintHorizontal_bias="0.506"/>
    <Button
            android:text="@string/pre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/arrow_left"
            android:id="@+id/pre_button"
            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/next_button"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
    />
    <Button
            android:text="@string/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:drawableRight="@drawable/arrow_right"
            android:id="@+id/next_button"
            app:layout_constraintStart_toEndOf="@+id/pre_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="286dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/cheat_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.648"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="304dp"
            android:layout_height="50dp"
            android:id="@+id/linearLayout5" app:layout_constraintTop_toBottomOf="@+id/question_textView"
            app:layout_constraintStart_toEndOf="@+id/pre_button" android:layout_marginBottom="344dp"
            app:layout_constraintEnd_toEndOf="@+id/pre_button" app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/true_button"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/true_button" android:layout_weight="1"/>
        <Button
                android:text="@string/false_button"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/false_button" android:layout_weight="1"/>
    </LinearLayout>
    <TextView
            tools:text="1 of 6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cheat_button"/>
</android.support.constraint.ConstraintLayout>